--- a/output.docker/output.docker/output.docker/index.html
+++ b/output.docker/output.docker/output.docker/index.html
@@ -209,7 +209,9 @@
     </p>
   <div class='py-0.5 mb-3 text-sm'><pre><code class='haskell language-haskell'>import Control.DeepSeq (force)
 import Control.Exception
-import Data.HashMap.Lazy (HashMap)</code></pre></div>
+import Data.HashMap.Lazy (HashMap)
+
+main = undefined</code></pre></div>
     <p class='mb-3'>
       Some math: inline as <span class='math inline'>\(2+2^2\)</span> and display as: <span class='math display'>$$
 \frac{1412334^3}{2}
